--- a/templates/board_game/show.html.twig
+++ b/templates/board_game/show.html.twig
@@ -10,10 +10,10 @@
         <li>{{ board_game.id }} {{ board_game.name }}</li>
         <li>A partir de : {{ board_game.ageGroup }}</li>
         <li>{{ board_game.description }}</li>
-        <li>Sorti le : {{ board_game.releasedAt|date('d/m/Y') }}</li>
+        <li>Sortie le : {{ board_game.releasedAt|date('d/m/Y') }}</li>
     </ul>
 
-    <p><a href="{{ path('board_game_index') }}">retour à la liste de jeux</a></p>
+    <p><a href="{{ path('board_game_index') }}">Retour à la liste de jeux</a></p>
 
 {% endblock body %}
 
