mettre le formulaire utilisable

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,17 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="label">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+
+        {%  if app.flashes is not empty %}
+
+        {% endif %}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
